--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Umberto Raucci">
-    <meta name="author" content="Devcrud">
+    <meta name="description" content="Umberto Raucci personal page">
+    <meta name="keywords" content="Umberto Raucci, reaction discovery, interactive quantum chemistry">
+    <meta name="author" content="Umberto Raucci">
     <title>Umberto Raucci</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -56,10 +57,10 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#portfolio" class="nav-link">Research</a>
+                        <a href="#research" class="nav-link">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#blog" class="nav-link">Publications</a>
+                        <a href="#publications" class="nav-link">Publications</a>
                     </li>
                     <li class="nav-item last-item">
                         <a href = "mailto: umberto.raucci@iit.it" class="nav-link">Contact</a>
@@ -78,8 +79,8 @@
                     at the Italian Institute of Technology, Genoa, Italy.</h6>
                 <h7 class="mt-20">My research interests lie at the intersection of chemistry, and computer science.
                     I develop and apply theoretical methods to 
-                    explore photoinduced processes, design new chromophores, and discover 
-                    unknown chemical reactions in complex environments.
+                    explore photoinduced processes, and discover 
+                    new chemical reactions in complex environments using enhanced sampling techniques.
                     Alongside these research topics, I'm also interested in combining cutting-edge technologies in machine learning, 
                         cloud computing and augmented reality to develop interactive applications 
                         to make computational chemistry readily accessible for the wider community. 
@@ -105,12 +106,12 @@
                 <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>
             </div>
             <div class="col-lg-4 about-card">
-                <h3 class="font-weight-light"><a href="#portfolio" style="color: black;">Research</a></h3>
+                <h3 class="font-weight-light"><a href="#research" style="color: black;">Research</a></h3>
                 <span class="line mb-5"></span>
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-bolt icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h5>Excited States Dynamics</h5>
+                        <h5>Photochemical Reactions</h5>
                         <hr>
                     </div>
                 </div>
@@ -224,7 +225,7 @@
     </section> -->
     <hr>
     <!--Resume Section-->
-    <section class="section" id="portfolio">
+    <section class="section" id="research">
         <div class="container">
             <h2 class="mb-5">Research</h2>
             <div class="row">
@@ -232,7 +233,7 @@
                     <div class="card">
                        <div class="card-header">
                             <div class="mt-2">
-                                <h4>Excited States Dynamics</h4>
+                                <h4>Photochemical Reactions</h4>
                                 <span class="line"></span>  
                             </div>
                         </div>
@@ -241,13 +242,11 @@
                             class="img-fluid" alt="Download free bootstrap 4 admin dashboard, 
                             free boootstrap 4 templates">
                             <br><br>
-                            <h6 class="mt-20">My research interests lie at the intersection of chemistry, and computer science.
-                                I develop and apply theoretical methods to 
-                                explore photoinduced processes, design new chromophores, and discover 
-                                unknown chemical reactions in complex environments.
-                                Alongside these research topics, I'm also interested in combining cutting-edge technologies in machine learning, 
-                                    cloud computing and augmented reality to develop interactive applications 
-                                    to make computational chemistry readily accessible for the wider community. 
+                            <h6 class="mt-20"> Modelling photochemical processes is far more challenging than computing 
+                                ground state properties. Due to their very fast timescales (on the order of ~fs-ps), 
+                                photoreactions are highly dynamical, non-equilibrium processes. Using ab initio multiple
+                                 spawning (AIMS) nonadiabatic dynamics method, I characterized the photochemical behavior 
+                                 of molecular photoswitches. 
                             </h6> 
                        </div>
                     </div>
@@ -261,22 +260,26 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <img src="assets/imgs/im1.png" 
+                            <br>
+                            <img src="assets/imgs/react_discovery.png" 
                             class="img-fluid" alt="Download free bootstrap 4 admin dashboard, 
                             free boootstrap 4 templates">
                             <br><br>
-                            <h6 class="mt-20">My research interests lie at the intersection of chemistry, and computer science.
-                                I develop and apply theoretical methods to 
-                                explore photoinduced processes, design new chromophores, and discover 
-                                unknown chemical reactions in complex environments.
-                                Alongside these research topics, I'm also interested in combining cutting-edge technologies in machine learning, 
-                                    cloud computing and augmented reality to develop interactive applications 
-                                    to make computational chemistry readily accessible for the wider community. 
+                            <br>
+                            <h6 class="mt-20">
+                                Chemistry is mostly about discovering new molecules, determining their properties and characterizing chemical pathways.
+                                 While the past was mainly dominated by heuristics and specialist chemical knowledge, the future will be monopolized 
+                                 by automated workflows for reaction discovery and refinement of the discovered paths. Recently, we proposed a 
+                                 modular workflow for blind reaction discovery and determination of reaction paths.
+                                We use a collective variable derived from spectral graph theory in conjunction with the explore variant of 
+                                the OPES method to drive reaction discovery runs.
+                                 Our workflow requires minimal user input and extends the power of ab initio molecular dynamics to explore 
+                                 and characterize the reaction space.
                             </h6> 
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="card">
                        <div class="card-header">
                             <div class="pull-left">
@@ -292,13 +295,13 @@
                            frameborder="0" allowfullscreen></iframe>    
                             </div>
                             <br>
-                            <h6 class="mt-20">My research interests lie at the intersection of chemistry, and computer science.
-                                I develop and apply theoretical methods to 
-                                explore photoinduced processes, design new chromophores, and discover 
-                                unknown chemical reactions in complex environments.
-                                Alongside these research topics, I'm also interested in combining cutting-edge technologies in machine learning, 
-                                    cloud computing and augmented reality to develop interactive applications 
-                                    to make computational chemistry readily accessible for the wider community. 
+                            <h6 class="mt-20">Quantum chemistry software typically requires coding expertise to install and run the software, 
+                                specialized knowledge to prepare input files and parse the output, and access to high-performance computing resources.
+                                 This results in a high barrier to entry for non-expert users. The recent ML-driven advances in image and speech recognition 
+                                 offer new routes to input molecular structures and initiate calculations. 
+                                 I combined these tools with cloud-based GPU-accelerated quantum chemistry and extended reality 
+                                 visualization to build a series of interactive quantum chemistry packages. 
+                                 These tools can compute quantum mechanical properties in real-time from hand-drawn structures or voice input.                                
                             </h6>
                         </div>
                     </div>
@@ -491,7 +494,7 @@
     </section> -->
     <!-- End of portfolio section -->
     <hr>
-    <section class="section" id="blog">
+    <section class="section" id="publications">
         <div class="container">
             <h2 class="mb-5">Publications</h2>
             <div class="row">
