--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
     <hr>
  <section class="section" id="publications">
          <div class="container">
-            <h2 class="mb-5">Cover</h2>
+            <h2 class="mb-5">Covers</h2>
              <div class="row">
                 <div class="blog-card">
                     <div class="col-md-6 col-lg-4 web">
