--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Umberto Raucci, reaction discovery, interactive quantum chemistry">
     <meta name="author" content="Umberto Raucci">
     <title>Umberto Raucci</title>
-	<meta name="google-site-verification" content="google04273f7f8628453f.html">
+	<meta name="google-site-verification" content="xk_U8oe34OCgOJVqEQ3WgfJeZ0JtX9CmidWVeeu2J7U" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + JohnDoe main styles -->
