--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <li class="social-item"><a class="social-link" href="https://twitter.com/uraucci87" target="_blank"><i class="ti-twitter" aria-hidden="true"></i></a></li>
                    <!-- <li class="social-item"><a class="social-link" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>-->
                 </ul>  
-                <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>
+<!--                <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>  -->
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light"><a href="#research" style="color: black;">Research</a></h3>
