--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <li class="social-item"><a class="social-link" href="https://twitter.com/uraucci87" target="_blank"><i class="ti-twitter" aria-hidden="true"></i></a></li>
                    <!-- <li class="social-item"><a class="social-link" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>-->
                 </ul>  
-<!--                <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>  -->
+                <a href="assets/imgs/Resume_Raucci.pdf" download> <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My Resume</button></a> 
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light"><a href="#research" style="color: black;">Research</a></h3>
@@ -253,6 +253,7 @@
                             <br>
                             <h6 class="mt-20"> 
 						    Relevant Publications: 
+   					        <a href="https://pubs.acs.org/doi/10.1021/acs.jctc.0c00782">[16], </a>	
    					        <a href="https://pubs.acs.org/doi/10.1021/acs.jpclett.0c02401">[18], </a>	
 							<a href="https://pubs.acs.org/doi/10.1021/jacs.1c06648">[24], </a>
 						    <a href="https://www.nature.com/articles/s41467-022-29662-1">[27], </a>	
@@ -325,7 +326,8 @@
                             <h6 class="mt-20"> 
                              Relevant Publications: 
                             <a href="https://www.nature.com/articles/s43588-020-00012-9">[23], </a>
-                            <a href="https://aip.scitation.org/doi/10.1063/5.0090482">[25]</a>
+                            <a href="https://aip.scitation.org/doi/10.1063/5.0090482">[25]</a>,
+                            <a href="https://www.annualreviews.org/doi/abs/10.1146/annurev-physchem-061020-053438">[30]</a>
                              </h6>
                         </div>
                     </div>
@@ -525,8 +527,14 @@
                 <div class="blog-card">
                     <div class="content-holder">
 
+                        <h6><b>30.</b>
+                            <u>Raucci U.</u>, Weir H., Sakshuwong S., Seritan S., Hicks C., Vannucci F., Rea F., Martínez T. J., 
+                            <a href="https://www.annualreviews.org/doi/abs/10.1146/annurev-physchem-061020-053438" target="_blank">
+                            <i>Interactive Quantum Chemistry Enabled by Machine Learning, Graphical Processing Units, and Cloud Computing,</i></a>
+                            <b>Annu. Rev. Phys. Chem.</b>, 2023, 74, 1</h6>
+
                         <h6><b>29.</b>
-                            <u>Raucci U.</u>, Sanchez D. M., Martínez T. J., Parrinello M. 
+                            <u>Raucci U.</u>, Sanchez D. M., Martínez T. J., Parrinello M.,
                             <a href="https://pubs.acs.org/doi/10.1021/jacs.2c04419" target="_blank">
                             <i>Enhanced Sampling Aided Design of Molecular Photoswitches,</i></a>
                             <b>J. Am. Chem. Soc.</b>, 2022, 144, 19265</h6>
